--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
     "nodemon": "^2.0.12"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
